fix: remove shadow and clip-path from main-menue toggle on mobile

--- a/css/c4aa-clipPaths.css
+++ b/css/c4aa-clipPaths.css
@@ -1,7 +1,7 @@
 h2, 
 h3, 
 h4,
-button,
+button:not(.main-menu-more-toggle),
 .button, 
 .wp-block-file__button,
 .wp-block-button:not(.is-style-outline),
